update images link

--- a/item-pages/Chef Specialties Dishes.html
+++ b/item-pages/Chef Specialties Dishes.html
@@ -75,7 +75,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">23.Ginger Chicken</h5>
@@ -99,7 +99,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">24. Lamb Konok:-£9.50 Breast</h5>
@@ -124,7 +124,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">25. Sweet chilli Chicken</h5>
@@ -149,7 +149,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">26.Seaview Special</h5>
@@ -174,7 +174,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">27.Sharia Chicken</h5>
@@ -199,7 +199,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">28. Mixed Masala</h5>
@@ -223,7 +223,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">29. Jalfrezi Special</h5>
@@ -247,7 +247,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">30. Chicken Jaflong</h5>
@@ -271,7 +271,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">31. Rousney Chicken</h5>
@@ -295,7 +295,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">32. Chicken Tk Chilli Massala</h5>
@@ -319,7 +319,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">33. Hariyali lamb</h5>
@@ -344,7 +344,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">34. Sylheti Chicken</h5>
@@ -369,7 +369,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">35.Naga Chicken</h5>
@@ -393,7 +393,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">36.Rajasthani Chicken</h5>
@@ -417,7 +417,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">37.Pickle Chicken</h5>
@@ -441,7 +441,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">38. King Prawn Jhinga</h5>
@@ -465,7 +465,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">39.Green Chicken Masala</h5>
