--- a/item-pages/European Dishes.html
+++ b/item-pages/European Dishes.html
@@ -46,7 +46,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">94.Chicken Nuggets</h5>
@@ -67,7 +67,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">95. Chicken Goujons</h5>
@@ -88,7 +88,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">96. Fried Chicken</h5>
@@ -109,7 +109,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">97. Chicken Omelettes</h5>
@@ -130,7 +130,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">98. Prawns Omelette</h5>
@@ -151,7 +151,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">99. Mushroom Omelettes</h5>
@@ -172,7 +172,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">100. Fish Finger</h5>
@@ -193,7 +193,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">101. Sirloin Steak</h5>
@@ -214,7 +214,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">102. Chicken Burger/Beef burger</h5>
