--- a/item-pages/Pizza Menu.html
+++ b/item-pages/Pizza Menu.html
@@ -52,7 +52,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">110. Margarita</h5>
@@ -79,7 +79,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">111. Roma</h5>
@@ -106,7 +106,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">112. Hawaiian</h5>
@@ -133,7 +133,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">113. Pepperoni</h5>
@@ -160,7 +160,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">114. Spicy Chicken</h5>
@@ -187,7 +187,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">115. Samosa (Calzone)</h5>
@@ -214,7 +214,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">116. Chefs Special</h5>
@@ -243,7 +243,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">117. pepperoni</h5>
@@ -270,7 +270,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">118. Hot And Spicy</h5>
@@ -299,7 +299,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">119. Tuna Special</h5>
@@ -326,7 +326,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">120. Volcano</h5>
@@ -355,7 +355,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">121. Rospella</h5>
@@ -382,7 +382,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">122. Vegetarian</h5>
@@ -411,7 +411,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">123. Munchy box</h5>
