--- a/item-pages/Vegetarian side Dishes.html
+++ b/item-pages/Vegetarian side Dishes.html
@@ -52,7 +52,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">68. Bindi Bhaji</h5>
@@ -73,7 +73,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">69. Chana Massal</h5>
@@ -94,7 +94,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">70. Saga ponir</h5>
@@ -115,7 +115,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">71. Bombay Aloo</h5>
@@ -136,7 +136,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">72. Mushroom Bhaji</h5>
@@ -157,7 +157,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">73. Tarka Dall</h5>
@@ -178,7 +178,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">74. Dall Masala</h5>
@@ -199,7 +199,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">75. Aloo Gobi</h5>
@@ -220,7 +220,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">76. Sag Aloo</h5>
@@ -241,7 +241,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">77. Eggplant Begun</h5>
