--- a/item-pages/appetizers.html
+++ b/item-pages/appetizers.html
@@ -43,7 +43,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">1. Onion Bhajis</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -63,7 +67,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">2. Vegetable or meat samosa</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -83,7 +91,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">3. Chicken Pakora</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -103,7 +115,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">4. Vegetable Pakora</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -123,7 +139,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">5. Sheek Kabab</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -143,7 +163,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">6. Chicken Tikka or Lamb Tikka</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -163,7 +187,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">7.Tandoori Chicken (¼)</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -183,7 +211,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">8. Chicken Chart or Aloo Chart</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -203,7 +235,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">9. King Prawns Pury</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -223,7 +259,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">10. King prawns Stir-fry</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -243,7 +283,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">11. Tandoori King Prawns</h5>
           <!-- <p class="card-description">
                         Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -263,7 +307,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">12. Spicy Chicken</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -283,7 +331,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">13. Chicken Stir-fry</h5>
           <!-- <p class="card-description">
                         Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -303,7 +355,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">14(a). T-Mix Platter</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -323,7 +379,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">14(b).Veg Mix Platter</h5>
           <!-- <p class="card-description">
                         Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -343,7 +403,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">15(a).Salted Chill Chicken</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -363,7 +427,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">15(b). King prawns</h5>
           <!-- <p class="card-description">
                         Chicken cooked with chop onions green pepper and fresh ginger medium
@@ -383,7 +451,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt=""
+          />
           <h5 class="card-title">16.King Prawns butterfly</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
