--- a/item-pages/tandoori specialtie.html
+++ b/item-pages/tandoori specialtie.html
@@ -50,8 +50,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">17(a).Chicken/Lamb Tikka</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">17(a).Chicken/Lamb Tikka</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
             spice.
@@ -70,8 +73,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">17(b). Tandoori Garlic</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">17(b). Tandoori Garlic</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -90,8 +96,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">18. Tandoori Chicken(½ On the Bone)</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">18. Tandoori Chicken(½ On the Bone)</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
             spice.
@@ -110,8 +119,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">19. Chicken or Lamb Shaslick</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">19. Chicken or Lamb Shaslick</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -130,8 +142,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">20.Tandoori King Prawns</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">20.Tandoori King Prawns</h5>
           <!-- <p class="card-description">
             Chicken cooked with chop onions green pepper and fresh ginger medium
             spice.
@@ -150,8 +165,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">21. Sheek Kabab (4 pice)</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">21. Sheek Kabab (4 pice)</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -170,8 +188,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">22.Tandoori mixed Grill</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">22.Tandoori mixed Grill</h5>
           <p class="card-description">
             (chicken tikka ,lamb tikka Shake Kababs ¼Tandoori chicken)
           </p>
