--- a/item-pages/traditional main Course.html
+++ b/item-pages/traditional main Course.html
@@ -77,8 +77,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">40. Curry</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">40. Curry</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -96,8 +99,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">41. Karma or Korma Balti</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">41. Karma or Korma Balti</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -115,8 +121,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">42. Bhuna</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">42. Bhuna</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -134,8 +143,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">43. Sag</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">43. Sag</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -153,8 +165,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">44. Dopiaza</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">44. Dopiaza</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -172,8 +187,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">45. RoganJosh</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">45. RoganJosh</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -191,8 +209,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">46. Dansak</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">46. Dansak</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -210,8 +231,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">47. Pathia</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">47. Pathia</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -229,8 +253,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">48. Madras</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">48. Madras</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -248,8 +275,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">49. Ceylon</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">49. Ceylon</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -267,8 +297,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">50.Vindaloo</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">50.Vindaloo</h5>
           <!-- <p class="card-description">
                   Chicken cooked with chop onions green pepper and fresh ginger medium
                   spice.
@@ -286,8 +319,11 @@
       <!-- single card  start-->
       <div class="card-item">
         <div class="card-top">
-          <img class="card-image" src="/assets/images/no-picture.jpg" alt="" />
-          <h5 class="card-title">51. Phall (very hot)</h5>
+          <img
+            class="card-image"
+            src="../assets/images/no-picture.jpg"
+            alt="image"
+          />          <h5 class="card-title">51. Phall (very hot)</h5>
           <!-- <p class="card-description">
                         Chicken cooked with chop onions green pepper and fresh ginger medium
                         spice.
