--- a/item-pages/Sundry Dishes.html
+++ b/item-pages/Sundry Dishes.html
@@ -48,7 +48,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">78. Pilau Rice or Boil Rice</h5>
@@ -69,7 +69,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">79. Fried Rice or Special Fried Rice</h5>
@@ -90,7 +90,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">80. Keema Rice</h5>
@@ -111,7 +111,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">81. Vegetable Rice or Garlic Rice</h5>
@@ -132,7 +132,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">82. Mushroom / Eggs Rice</h5>
@@ -153,7 +153,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">83. Plane Naan</h5>
@@ -174,7 +174,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">84. Garlic Naan or Chilli Naan</h5>
@@ -195,7 +195,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">85. Garlic Cheesy Naan</h5>
@@ -216,7 +216,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">86. GOC Naan</h5>
@@ -237,7 +237,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">87. Peshwari Naan or Keema Naan</h5>
@@ -258,7 +258,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">88. Chappati or Tandoori Roti</h5>
@@ -279,7 +279,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">89. Paratha</h5>
@@ -300,7 +300,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">90. Chips</h5>
@@ -321,7 +321,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">91. Bangl Chips (spicey)</h5>
@@ -342,7 +342,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">92. Plain yogurt</h5>
@@ -363,7 +363,7 @@
         <div class="card-top">
           <img
             class="card-image"
-            src="/assets/images/no-picture.jpg"
+            src="../assets/images/no-picture.jpg"
             alt="image"
           />
           <h5 class="card-title">93. Papadam plain/spicy</h5>
